--- a/src/main/resources/templates/results.html
+++ b/src/main/resources/templates/results.html
@@ -8,12 +8,12 @@
     <title>Document</title>
 </head>
 <body>
-    <ul>
-      <li><a href="http://localhost:8080/em2024/test">Home</a></li>
-      <li><a href="http://localhost:8080/em2024/tipps/current">Tipps</a></li>
-      <li><a href="http://localhost:8080/em2024/results/current">Results</a></li>
-      <li><a href="http://localhost:8080/em2024/about">About</a></li>
-      </ul>
+<ul>
+    <li><a href="http://localhost:8080/em2024/">Home</a></li>
+    <li><a href="http://localhost:8080/em2024/tipps/current">Tipps</a></li>
+    <li><a href="http://localhost:8080/em2024/results/current">Results</a></li>
+    <li><a href="http://localhost:8080/em2024/impressum">About</a></li>
+</ul>
     <div class="site">
       <div class="dropdown">
       <select id="dropdown"onchange="switchSite(value)" >
