--- a/src/main/resources/templates/tippseite.html
+++ b/src/main/resources/templates/tippseite.html
@@ -9,10 +9,10 @@
 </head>
 <body>
 <ul>
-    <li><a href="http://localhost:8080/em2024/test">Home</a></li>
+    <li><a href="http://localhost:8080/em2024/">Home</a></li>
     <li><a href="http://localhost:8080/em2024/tipps/current">Tipps</a></li>
     <li><a href="http://localhost:8080/em2024/results/current">Results</a></li>
-    <li><a href="http://localhost:8080/em2024/about">About</a></li>
+    <li><a href="http://localhost:8080/em2024/impressum">About</a></li>
 </ul>
 <div class="site">
     <div class="dropdown">
@@ -35,11 +35,12 @@
 
         <span class="text">
             <span class="team_left" th:text="${spiel.getHeimverein().getVereinsName()}"></span>
-
+<!-- ssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss -->
             <span th:if="${spiel.getMatchIsFinished()}">
-                <span class="score_left" th:text="${spiel.getHeimVereinTore()}">
-                </span>
+                <span class="score_left" th:text="${spiel.getHeimVereinTore()}"></span>
             </span>
+            <!-- ssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss -->
+
               <span th:unless="${spiel.getMatchIsFinished()}">
                   <span th:if="${tippListe.get(spiel.getMatchID())!=null}">
                   <span class="score_left"><input type="number" style="width: 1rem" name="HeimVereinTore" th:placeholder="${tippListe.get(spiel.getMatchID()).getHeimvereintore()}" required></span>
@@ -53,10 +54,13 @@
             <span class="divide">:</span>
 
 
-
+            <!-- ssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss -->
               <span th:if="${spiel.getMatchIsFinished()}">
                 <span class="score_right" th:text="${spiel.getAuswaertsVereinTore()}"></span>
             </span>
+            <!-- ssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss -->
+
+
               <span th:unless="${spiel.getMatchIsFinished()}">
                   <span th:if="${tippListe.get(spiel.getMatchID())!=null}">
                   <span class="score_right"><input type="number" style="width: 1rem" name="AuswaertsVereinTore" th:placeholder="${tippListe.get(spiel.getMatchID()).getAuswaertsvereintore()}" required></span>
