--- a/src/main/resources/templates/impressum.html
+++ b/src/main/resources/templates/impressum.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
+<ul>
+    <li><a href="http://localhost:8080/em2024/">Home</a></li>
+    <li><a href="http://localhost:8080/em2024/tipps/current">Tipps</a></li>
+    <li><a href="http://localhost:8080/em2024/results/current">Results</a></li>
+    <li><a href="http://localhost:8080/em2024/impressum">About</a></li>
+</ul>
 <div class='impressum'><h1>Impressum</h1>
     <p>Angaben gemäß § 5 TMG</p>
     <p>Etienne Bader<br>
