--- a/src/main/resources/templates/impressum.html
+++ b/src/main/resources/templates/impressum.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <html lang="de">
 <head>
     <meta charset="UTF-8">
@@ -13,6 +15,7 @@
     <li><a href="http://localhost:8080/em2024/tipps/current">Tipps</a></li>
     <li><a href="http://localhost:8080/em2024/results/current">Results</a></li>
     <li><a href="http://localhost:8080/em2024/impressum">About</a></li>
+    <li><a href="http://localhost:8080/api/auth/signin">Log out</a></li>
 </ul>
 <div class='impressum'><h1>Impressum</h1>
     <p>Angaben gemäß § 5 TMG</p>
