--- a/src/main/resources/templates/tippseite.html
+++ b/src/main/resources/templates/tippseite.html
@@ -13,6 +13,7 @@
     <li><a href="http://localhost:8080/em2024/tipps/current">Tipps</a></li>
     <li><a href="http://localhost:8080/em2024/results/current">Results</a></li>
     <li><a href="http://localhost:8080/em2024/impressum">About</a></li>
+    <li><a href="http://localhost:8080/api/auth/signin">Log out</a></li>
 </ul>
 <div class="site">
     <div class="dropdown">
