--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,17 +5,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" th:href="@{/results.css}">
+    <link rel="stylesheet" th:href="@{/homepage.css}">
     <title>Home</title>
 </head>
+
 <body>
+<div class="container">
+    <div class="soccer-ball"></div>
+</div>
 <ul>
     <li><a href="http://localhost:8080/em2024/">Home</a></li>
     <li><a href="http://localhost:8080/em2024/tipps/current">Tipps</a></li>
     <li><a href="http://localhost:8080/em2024/results/current">Results</a></li>
     <li><a href="http://localhost:8080/em2024/impressum">About</a></li>
     <li><a href="http://localhost:8080/api/auth/signin">Log out</a></li></ul>
-    <h1>Hallo <span th:text="${username}"></span></h1>
-    <p th:text="${punktzahl}"></p>
+
+<div id="site">
+    <div id="username">
+        <h1>Hallo <span th:text="${username}"></span></h1>
+    </div>
+    <div id="punktzahl">
+        <p > Deine Punktzahl ist: <span th:text="${punktzahl}"></span></p>
+    </div>
+</div>
+
+
+<script type="text/javascript" th:src="@{/homepage.js}"></script>
+<div class="count-particles">
+    <span class="js-count-particles"></span>
+</div>
+
+<!-- particles.js container -->
+<div id="particles-js"></div>
+<div id="particles">
+    <script th:src="@{/login2.js}" src="../static_resources/js/bsp.js"></script>
+    <script th:src="@{/login3.js}" src="../static_resources/js/bsp.js"></script>
+
+    <!-- stats.js -->
+    <script th:src="@{/login4.js}" src="../static_resources/js/bsp.js"></script>
+
+</div>
 </body>
 </html>
