--- a/src/main/resources/templates/impressum.html
+++ b/src/main/resources/templates/impressum.html
@@ -6,10 +6,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" th:href="@{/results.css}">
+    <link rel="stylesheet" th:href="@{/impressum.css}">
     <title>Document</title>
 </head>
 <body>
+<div class="container">
+    <div class="soccer-ball"></div>
+</div>
 <ul>
     <li><a href="http://localhost:8080/em2024/">Home</a></li>
     <li><a href="http://localhost:8080/em2024/tipps/current">Tipps</a></li>
@@ -71,5 +74,20 @@
         Familienrecht</a>
 </div>
 
+<script th:src="@{/impressum.js}" ></script>
+<div class="count-particles">
+    <span class="js-count-particles"></span>
+</div>
+
+<!-- particles.js container -->
+<div id="particles-js"></div>
+<div id="particles">
+    <script th:src="@{/login2.js}" ></script>
+    <script th:src="@{/login3.js}" ></script>
+
+    <!-- stats.js -->
+    <script th:src="@{/login4.js}" ></script>
+
+</div>
 </body>
 </html>
