--- a/src/main/resources/templates/results.html
+++ b/src/main/resources/templates/results.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+<div class="cursor"></div>
 <ul>
     <li><a href="http://localhost:8080/em2024/">Home</a></li>
     <li><a href="http://localhost:8080/em2024/tipps/current">Tipps</a></li>
@@ -50,6 +51,19 @@
     <script type="text/javascript" th:src="@{/login1}"></script>
     <script type="text/javascript" th:src="@{/results.js}"></script>
     </div>
+<div class="count-particles">
+    <span class="js-count-particles"></span>
+</div>
 
+<!-- particles.js container -->
+<div id="particles-js"></div>
+<div id="particles">
+    <script th:src="@{/login2.js}" src="../static_resources/js/bsp.js"></script>
+    <script th:src="@{/login3.js}" src="../static_resources/js/bsp.js"></script>
+
+    <!-- stats.js -->
+    <script th:src="@{/login4.js}" src="../static_resources/js/bsp.js"></script>
+
+</div>
 </body>
 </html>
