--- a/src/main/resources/static_resources/css/impressum.css
+++ b/src/main/resources/static_resources/css/impressum.css
@@ -44,7 +44,7 @@ li a:hover {
     color: white;
 }
 a{
-    color:cornflowerblue;
+    color:midnightblue;
 }
 .impressum{
     text-align: center;
