--- a/src/main/resources/static_resources/css/results.css
+++ b/src/main/resources/static_resources/css/results.css
@@ -240,3 +240,38 @@ ul:hover{
     transition: 1s;
     box-shadow: 0px 0px 14px 6px #FFFFFF;
 }
+.soccer-ball {
+    position: fixed;
+        top: 0;
+        left: 0;
+        transform: translate(-50%, -50%);
+        z-index: 5;
+        pointer-events: none;
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        background: url('https://raw.githubusercontent.com/Yousuke777/texture/main/soccer-ball-02.png') repeat;
+        background-size: 200%;
+        animation: rotate-anim 2s linear infinite;
+    }
+
+    /*.soccer-ball:after {
+        content: "";
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: -5px;
+        margin: auto;
+        width: 80px;
+        height: 5px;
+        border-radius: 50%;
+        background: #000;
+        filter: blur(5px);
+        z-index: -1;
+    }*/
+
+    @keyframes rotate-anim {
+        100% {
+            background-position: -100% 0;
+        }
+    }
