--- a/src/main/resources/templates/tippseite.html
+++ b/src/main/resources/templates/tippseite.html
@@ -8,7 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-<div class="cursor"></div>
+<div class="container">
+    <div class="soccer-ball"></div>
+</div>
 <ul>
     <li><a href="http://localhost:8080/em2024/">Home</a></li>
     <li><a href="http://localhost:8080/em2024/tipps/current">Tipps</a></li>
