--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -5,8 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../static_resources/css/error.css">
 </head>
 <body>
-    
+    <div id="errorCode">
+        <h1>404</h1>
+    </div>
+    <div id="container" >
+        <div class="box box1">E</div>
+        <div class="box box2" ></div>
+        <div class="box box3"></div>
+
+        <div class="box box4">R</div >
+        <div class="box box5">R</div >
+        <div class="box box6"></div>
+
+        <div class="box box7"></div>
+        <div class="box box8">O</div >
+        <div class="box box9">R</div>
+    </div>
 </body>
 </html>
