adjusted the placement and made a the mobile view better

--- a/src/main/resources/static_resources/css/homepage.css
+++ b/src/main/resources/static_resources/css/homepage.css
@@ -266,6 +266,14 @@ position: fixed;
     background: rgba(255, 255, 255, 0.04);
     backdrop-filter: blur(5px);
 }
+#erklärung{
+    margin:10px;
+    padding:10px;
+    border-radius:1rem;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    background: rgba(255, 255, 255, 0.04);
+    backdrop-filter: blur(5px);
+}
 #punktzahl{
 
     margin:10px;
@@ -277,4 +285,58 @@ position: fixed;
 }
 #punktzahl:onlychild{
     font-size:larger;
+}
+@media (max-width: 768px) {
+    body {
+        padding: 0;
+        margin: 0;
+        font-size: 16px;
+    }
+    .site {
+            justify-content: center;
+            align-items: center;
+        }
+
+    #window {
+            flex-direction: column nowrap;
+            width: 100%; /* oder eine andere geeignete Breite */
+            height: auto;
+            padding: 1rem;
+        }
+
+    img {
+        height: 3rem;
+        width: 3rem;
+    }
+
+    ul {
+        display: flex;
+        flex-direction: column;
+    }
+
+    li {
+        float: none;
+        width: 100%;
+        text-align: center;
+    }
+
+    li a {
+        padding: 10px;
+    }
+
+    .submit, input {
+        width: 100%;
+        margin-top: 0.5rem;
+    }
+
+    .text {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .logo_left, .logo_right {
+        width: 3rem;
+        height: 3rem;
+    }
 }
