--- a/src/main/resources/templates/results.html
+++ b/src/main/resources/templates/results.html
@@ -19,6 +19,7 @@
     <li><a href="http://localhost:8080/api/auth/signin" onclick="deleteAuthToken()">Log out</a></li>
 </ul>
     <div class="site">
+        <h1>Ergebnisseite</h1>
       <div class="dropdown">
       <select id="dropdown"onchange="switchSite(value)" >
         <option value="current" >heute</option>
