--- a/src/main/resources/static_resources/css/results.css
+++ b/src/main/resources/static_resources/css/results.css
@@ -4,16 +4,15 @@ html {
     background-attachment: fixed;
     cursor: none;
     background-size: cover;
-    background-repeat: no-repeat;
     background-position: 50% 50%;
 }
 
 .site {
     display: flex;
     flex-flow: column;
-    align-items: center;  /* Center the children horizontally */
+    align-items: center;
     justify-content: center;
-    width: 100%;  /* Make sure it takes full width */
+    width: 100%;
     z-index: 4;
 }
 
@@ -29,9 +28,8 @@ html {
     background: rgba(255, 255, 255, 0.04);
     color: white;
     transition-duration: 1s;
-    margin-top:2rem;
-    margin-bottom:1rem;
-
+    margin-top: 2rem;
+    margin-bottom: 1rem;
 }
 
 option {
@@ -83,7 +81,7 @@ img {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    border-radius:1rem;
+    border-radius: 1rem;
     border: 1px solid rgba(255, 255, 255, 0.3);
     background: rgba(255, 255, 255, 0.04);
     color: white;
@@ -96,7 +94,7 @@ img {
     margin-right: auto;
 }
 
-.logo_left {
+.logo_left, .logo_right {
     background: none;
     border-style: solid;
     outline: none;
@@ -109,25 +107,7 @@ img {
     height: 4rem;
 }
 
-.logo_left:hover {
-    transition: 1s;
-    box-shadow: 0px 0px 14px 6px #FFFFFF;
-}
-
-.logo_right {
-    background: none;
-    border-style: solid;
-    outline: none;
-    border-color: white;
-    border-width: 5px;
-    color: white;
-    transition-duration: 1s;
-    border-radius: 50%;
-    width: 4rem;
-    height: 4rem;
-}
-
-.logo_right:hover {
+.logo_left:hover, .logo_right:hover {
     transition: 1s;
     box-shadow: 0px 0px 14px 6px #FFFFFF;
 }
@@ -158,48 +138,6 @@ input[type=number] {
     transition: 2s;
     box-shadow: 0px 0px 14px 6px #FFFFFF;
 }
-
-input:hover {
-    transition: 2s;
-    box-shadow: 0px 0px 14px 6px #FFFFFF;
-}
-
-input:focus {
-    transition: 2s;
-    box-shadow: 0px 0px 14px 6px #FFFFFF;
-}
-
-.cursor {
-    position: fixed;
-    top: 0;
-    left: 0;
-    transform: translate(-50%, -50%);
-    border-radius: 50%;
-    z-index: 5;
-    pointer-events: none;
-    width: 10px;
-    height: 10px;
-    background-color: white;
-    border-width: 5;
-    border-style: none;
-}
-
-.outline {
-    position: fixed;
-    top: 0;
-    left: 0;
-    transform: translate(-50%, -50%);
-    border-radius: 50%;
-    border-style: solid;
-    z-index: 3;
-    pointer-events: none;
-    width: 100px;
-    height: 100px;
-    border-width: 1;
-    border-style: none;
-    backdrop-filter: blur(4px) saturate(10%) invert(100%);
-}
-
 #particles-js {
     position: fixed;
     width: 100%;
@@ -209,17 +147,6 @@ input:focus {
     z-index: -1;
 }
 
-input {
-    background: none;
-    border-style: solid;
-    border-radius: 5px;
-    outline: none;
-    border-color: white;
-    border-width: 1px;
-    color: white;
-    transition-duration: 1s;
-    color: white;
-}
 
 input::placeholder {
     color: white;
@@ -229,51 +156,93 @@ input::placeholder {
     transition: 1s;
     box-shadow: 0px 0px 14px 6px #FFFFFF;
 }
-select:hover{
+
+select:hover {
     transition: 1s;
     box-shadow: 0px 0px 14px 6px #FFFFFF;
 }
-select{
+
+select {
     text-align: center;
 }
-ul:hover{
+
+ul:hover {
     transition: 1s;
     box-shadow: 0px 0px 14px 6px #FFFFFF;
 }
+
 .soccer-ball {
     position: fixed;
-        top: 0;
-        left: 0;
-        transform: translate(-50%, -50%);
-        z-index: 5;
-        pointer-events: none;
-        width: 20px;
-        height: 20px;
-        border-radius: 50%;
-        background: url('https://raw.githubusercontent.com/Yousuke777/texture/main/soccer-ball-02.png') repeat;
-        background-size: 200%;
-        animation: rotate-anim 2s linear infinite;
+    top: 0;
+    left: 0;
+    transform: translate(-50%, -50%);
+    z-index: 5;
+    pointer-events: none;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: url('https://raw.githubusercontent.com/Yousuke777/texture/main/soccer-ball-02.png') repeat;
+    background-size: 200%;
+    animation: rotate-anim 2s linear infinite;
+    box-shadow: inset 5px 5px 12px -4px #000000;
+}
 
-	    box-shadow: inset 5px 5px 12px -4px #000000;
+@keyframes rotate-anim {
+    100% {
+        background-position: -100% 0;
+    }
+}
+
+h1 {
+    color: white;
+}
+@media (max-width: 768px) {
+    body {
+        padding: 0;
+        margin: 0;
+        font-size: 16px;
     }
 
-    /*.soccer-ball:after {
-        content: "";
-        position: absolute;
-        left: 0;
-        right: 0;
-        bottom: -5px;
-        margin: auto;
-        width: 80px;
-        height: 5px;
-        border-radius: 50%;
-        background: #000;
-        filter: blur(5px);
-        z-index: -1;
-    }*/
-
-    @keyframes rotate-anim {
-        100% {
-            background-position: -100% 0;
-        }
+    #window {
+        flex-direction: column;
+        width: 90%;
+        height: auto;
+        padding: 1rem;
     }
+
+    img {
+        height: 3rem;
+        width: 3rem;
+    }
+
+    ul {
+        display: flex;
+        flex-direction: column;
+    }
+
+    li {
+        float: none;
+        width: 100%;
+        text-align: center;
+    }
+
+    li a {
+        padding: 10px;
+    }
+
+    .submit, input {
+        width: 100%;
+        margin-top: 0.5rem;
+    }
+
+    .text {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .logo_left, .logo_right {
+        width: 3rem;
+        height: 3rem;
+    }
+}
